# DMCO

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dmco.yaml
data/: README.md
data/raw/adult/: inject_errors_regress.py
data/raw/cancer/: cancer_25.csv  cancer_data_vectorized.csv  cancer_random_10.csv  cancer_random_15.csv  cancer_random_20.csv  cancer_random_25.csv  cancer_random_5.csv  cancer_systematic_10.csv  cancer_systematic_15.csv  cancer_systematic_20.csv  cancer_systematic_25.csv  cancer_systematic_5.csv  inject_errors_regress.py
data/raw/cancer_mix/: gauss_white.csv  random_missing_gauss.csv  random_missing_random_outliers.csv  random_missing_white.csv  random_outliers_gauss.csv  random_outliers_white.csv  res.txt  res_single.txt  system_missing_gauss.csv  system_missing_random_missing.csv  system_missing_white.csv  (+6 more)
docs/: PAPER_ALIGNMENT.md  REPRODUCIBILITY.md
legacy/: Gluton_test.py  automl_partial.py  chapter1.py  main.py  pre_exp.py  sample.py  sample_c.py  sample_error.py  sample_new.py  ucb.py  ucb_r.py
results/: table2_cancer_comparison.csv  table2_cancer_reproduction.csv  table2_cancer_reproduction_pivot.csv  table2_quick_comparison.csv  table2_quick_reproduction.csv  table2_quick_reproduction_pivot.csv
scripts/: compare_table2.py  prepare_local_data.py  run_baselines.py  run_paper_suite.py  run_table2.py
src/dmco/: __init__.py  automl.py  baselines.py  cli.py  config.py  data.py  gradients.py  metrics.py  pipeline.py  sampling.py  scheduler.py
tests/: test_sampling.py  test_scheduler.py
(+135 files in other folders)
